[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>
[ADD] Reload of the keys weapons does something(Please test)
[ADD] Re-added the earthquake sound
[CHANGE] All door controls are now done though reload with the Keys weapon.
[CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
[CHANGE] The way prop protection works for admins
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.


VERSION 2.3.1
Updated by: FPtje Falco

[ADD by FPtje] Awesome change job screen, Press F4 while not looking at a door
[ADD by FPtje] Player possessor swep for the admins
[ADD by FPtje] Sleep sound
[ADD by FPtje] New team! Hobo
[ADD by FPtje] Cops can warrant through TAB scoreboard :D
[ADD by FPtje] The battering ram can unfreeze props of warranted players!
[FIX by FPtje] People being able to duplicate DarkRP entities/Remove other people's entities through a slider/winch/muscle/etc.
[FIX by FPtje] Having to respawn when you change your job, Now you can change your job without respawning
[FIX by FPtje] When you go to sleep and back you now get all your weapons back
[FIX by FPtje] Medic's can't "heal" when someone's health is or is bigger than 100
[FIX by FPtje] When you're arrested and join more than 120 seconds later you won't get re-arrested. but if you rejoin in less than those 120 seconds you will get rearrested
[FIX by FPtje] People being able to disable motionblur/dof/the black screen by doing pp_colormod 0/pp_dof 0/pp_motionblur 0
[FIX by FPtje] When you do a vote when alone then it doesn't vote, it just accepts
[FIX by FPtje] You can't vote when you made the vote yourself
[FIX by FPtje] The moneyhack with the gunlabs and microwaves :D
[Change by FPtje] Medic gun can now heal self
[Change by FPtje] The way the medic kit heals, it doesn't do it instantly anymore